# Fish

./: .gitignore
Client/src/assets/mappings/: mcp_1.12.2.tsrg  vanilla_1.12.2.srg  vanilla_1.8.9.srg
Launcher/Launcher/src/: Main.java
fish/: fishgc使用方法.txt  inject.bat
injector/: CMakeLists.txt  Inject.c  LoadLibraryR.c  Memory.h  build_dll_as_agent.bat  dllmain.c  dllmain.cpp  fun_inject_InjectorUtils.h  inject.cpp  injector.cpp  jawt.h  jdwpTransport.h  old  old2  utils.c  utils.h
injector/lib/: libMinHook.x64.lib
injector/src/demo/hook/: hook.c
injector/src/dll/: ReflectiveDLLInjection.h  ReflectiveLoader.c  ReflectiveLoader.h  dllmain.c
injector/src/hook/: hook.c
injector/src/injector/: GetProcAddressR.c  GetProcAddressR.h  Inject.c  LoadLibraryR.c  LoadLibraryR.h
injector/src/java/: jni.h  jvm.h
injector/src/launcher/: main.c
mappings/1.12.2/: joined.srg
mappings/1.8.9/: methods.csv
src/: HackInst.h  HackInst.java
src/assets/mappings/: mcp_1.12.2.tsrg  vanilla_1.8.9.srg
src/com/fun/gui/: FishFrame.java  (+2 more)
src/fun/client/: FunGhostClient.java
src/fun/gui/: FishFrame.java  Injector.java  Main.java  VerticalFlowLayout.java
src/fun/inject/: Agent.java  InjectorUtils.java  Loader.java  Main.java  Native.java  NativeUtils.java  fun_inject_InjectorUtils.h  fun_inject_NativeUtils.h
src/fun/network/: TCPClient.java  TCPServer.java
src/fun/utils/: Classes.java  Fields.java  MathHelper.java  Methods.java  PacketUtils.java  VClass.java  VField.java  VMethod.java  VRunable.java  Vec3.java  Vec3i.java  Version.java  VersionNameManager.java
(+614 files in other folders)
